manifest.yaml
apiVersion: apps/v1
# this the type of object we are making
kind: Deployment
metadata:
# This is the name of my deployment
  name: cit270seanservice
# The specification for our deployment
spec:
# How many pods?
  replicas: 1
# Used to identify the pod we want to talk to  
  selector:
    matchLabels:
      app: cit270seanservice
# Template to create containers
  template:
    metadata:
      name: cit270seanservice
      labels:
        app: cit270seanservice
# specification for pod        
    spec:
      containers:
# name of container      
      - name: cit270seanservice
# Docker image registry      
        image: scmurdock/cit270-fall2022
# Directories we are making accessible to containers        
        volumeMounts:
# Name of the volume        
        - name: ssl
# Directory for certificates        
          mountPath: "/etc/letsencrypt/live/seanmurdock.cit270.com"
# First part of the command to start our API          
        command: ["npm"]
# Parameters to add to the command        
        args: ["run","start"]
# Resources for the pod
        resources:
          requests:
# How many cores to start with        
            cpu: 0.125
# How much memory to start             
            memory: 500Mi
          limits:
# How many cores to limit to          
            cpu: 0.125
# Max memory for the pod            
            memory: 600Mi
        imagePullPolicy: Always
# Create volumes from the secrets        
      volumes:
# Name of the secret      
      - name: ssl
# Secret       
        secret: 
# Secret name you created today        
          secretName: seancerts
---
apiVersion: v1
kind: Service
metadata:
  name: stedi-seanmurdock-nodeport
spec:
  selector:
    app: cit270seanservice # this needs to match the name of your deployment (line 6)
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stedi-seanmurdock-ingress
  annotations:
  # Use this command to find the address name: gcloud compute addresses list 
    kubernetes.io/ingress.global-static-ip-name: cit270sean
  # needs to match the name of the ManagedCertificate (line 75)
    networking.gke.io/managed-certificates: stedi-seanmurdock-certificate
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
          # needs to match the name of the NodePort Service (line 63)
            name: stedi-seanmurdock-nodeport
            port:
              number: 80
